--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "next": "12.0.9",
     "react": "17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
+    "sass": "^1.49.7",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2"
   },
