--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
+    "react-grid-carousel": "^1.0.1",
     "sass": "^1.49.7",
     "styled-components": "^5.3.3",
+    "swiper": "^8.0.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
