--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.2",
     "react-grid-carousel": "^1.0.1",
     "sass": "^1.49.9",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "swiper": "^8.0.6",
     "uuid": "^8.3.2"
