--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "next": "12.0.9",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-dnd": "^15.1.1",
+    "react-dnd-html5-backend": "^15.1.2",
+    "react-dnd-touch-backend": "^15.1.1",
     "react-dom": "17.0.2",
     "react-grid-carousel": "^1.0.1",
     "sass": "^1.49.9",
